# confi

./: CMakeLists.txt  INSTALL  LICENSE  README.md  check.c  check.h  confi.c  confi.h  confi_err.c  confi_err.h  confi_token.c  config.c  config.h  err.c  err.h  error.c  error.h  main.c  main.conf  token.c  token.h  value.c  value.h
example/: CMakeLists.txt  main.c  main.conf
examples/: CMakeLists.txt  example.c  example.conf  example.cpp  example_allow.c  example_allow.conf  example_error.c  example_parse_string.c
inc/: token.c  value.c
tests/: CMakeLists.txt  check.c  file.c  file_not_found.c  main.c  param.c  params.c  simple.conf  tests.c  tests.h  token.c  value.c
tests/integration/: CMakeLists.txt  file.c  main.c  param.c  token.c  value.c
tests/token/: main.c
tests/unit/: CMakeLists.txt  t1.conf  token.c
